log
Thu 18 Aug 2022 01:30:21 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:10: error: ‘List’ {aka ‘struct List’} has no member named ‘primero’
   33 |         L->primero = NULL;
      |          ^~
list.c:34:10: error: ‘List’ {aka ‘struct List’} has no member named ‘ultimo’
   34 |         L->ultimo = NULL;
      |          ^~
Compilation failed
b9b72c8
Thu 18 Aug 2022 01:31:22 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:10: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   33 |         L->first = NULL;
      |          ^~
list.c:34:10: error: ‘List’ {aka ‘struct List’} has no member named ‘last’
   34 |         L->last = NULL;
      |          ^~
Compilation failed
64a9363
